<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/_171717"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/email_or_username"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColorHint="@color/_615555"
        android:textAlignment="textStart"
        android:hint="@string/input_email"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:backgroundTint="#322F2F"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/password_txt"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textSize="16sp"
        android:textColorHint="@color/_615555"
        android:textAlignment="textStart"
        android:hint="@string/input_password"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:backgroundTint="#322F2F"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_gravity="center"
        android:background="@drawable/login_btn"
        android:paddingStart="38dp"
        android:paddingEnd="38dp"
        android:textSize="16sp"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:hint="@string/login"
        android:textColor="@color/_615555"
        android:layout_marginTop="46dp"
        android:backgroundTint="#322F2F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:fontFamily="sans-serif-light"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_without"
        android:hint="@string/log_in_without_password"
        android:padding="0dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:textStyle="bold">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/or_login_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/google_login"
            android:src="@drawable/google"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="40dp">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/fb"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="40dp">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/twitter"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="40dp">

        </androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

</LinearLayout>